# lockbox-research

./: LICENSE
01-simple-messenger-server/database/: docker-compose.yml  init.sql
01-simple-messenger-server/server/: Cargo.toml
01-simple-messenger-server/server/src/: chat_server.rs  db.rs  handlers.rs  main.rs  models.rs
01-simple-messenger-server/server/src/migrations/: 0001_initial.up.sql
