[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11.8"
log = "0.4"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio", "macros"] }
dotenv = "0.15"